--- a/package.json
+++ b/package.json
@@ -1,38 +1,28 @@
 {
-  "name": "fun",
-  "version": "0.1.0",
-  "private": true,
+  "name": "game",
+  "version": "1.0.0",
+  "description": "game",
+  "main": "index.js",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "esbuild": "^0.13.3",
+    "kaboom": "^2000.0.0-beta.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
+    "serve": "^12.0.1",
+    "static-here": "^1.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "parcel index.html -p 8000",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "forze",
+  "license": "ISC",
+  "keywords": [
+    "game"
+  ],
+  "alias": {
+    "kaboom": "./node_modules/kaboom/dist/kaboom.mjs"
   }
 }
