--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "react-scripts": "^4.0.3",
     "serve": "^12.0.1",
     "static-here": "^1.0.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "concurrently": "^6.2.2"
   },
   "scripts": {
     "start": "parcel index.html -p 8000",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently \"cd hehe && npm run start\" \"npm run start\""
   },
   "author": "forze",
   "license": "ISC",
