--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "parcel index.html -p 8000",
-    "dev": "concurrently \"cd hehe && npm run start\" \"npm run start\""
+    "dev": "concurrently \"npm run start\" \"cd hehe && npm run start\""
   },
   "author": "forze",
   "license": "ISC",
