--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "game",
   "version": "1.0.0",
   "description": "game",
-  "main": "index.js",
+  "private": true,
   "dependencies": {
+    "concurrently": "^6.2.2",
     "esbuild": "^0.13.3",
     "kaboom": "^2000.0.0-beta.23",
     "react": "^17.0.2",
@@ -11,8 +12,7 @@
     "react-scripts": "^4.0.3",
     "serve": "^12.0.1",
     "static-here": "^1.0.0",
-    "web-vitals": "^1.1.2",
-    "concurrently": "^6.2.2"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "parcel index.html -p 8000",
@@ -25,5 +25,8 @@
   ],
   "alias": {
     "kaboom": "./node_modules/kaboom/dist/kaboom.mjs"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.8.0"
   }
 }
