--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "concurrently": "^6.2.2",
     "esbuild": "^0.13.3",
     "kaboom": "^2000.0.0-beta.23",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "serve": "^12.0.1",
     "static-here": "^1.0.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "parcel-bundler": "^1.12.5"
   },
   "scripts": {
     "start": "parcel index.html -p 8000",
@@ -27,6 +29,7 @@
     "kaboom": "./node_modules/kaboom/dist/kaboom.mjs"
   },
   "devDependencies": {
+    "webpack": "^4.46.0",
     "webpack-cli": "^4.8.0"
   }
 }
