--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "parcel-bundler": "^1.12.5"
   },
   "scripts": {
-    "start": "parcel index.html -p 8000",
+    "start": "parcel index.html",
     "dev": "concurrently \"npm run start\" \"cd hehe && npm run start\""
   },
   "author": "forze",
