--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "serve": "^12.0.1",
     "static-here": "^1.0.0",
     "web-vitals": "^1.1.2",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "webpack": "4.44.2"
   },
   "scripts": {
     "start": "parcel index.html",
