--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "game",
   "private": true,
   "engines": {
-    "node": "16.0.0",
+    "node": "14.x",
      "npm": "7.21.0"
     },
   "dependencies": {
