--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
   "type": "module",
   "engines": {
     "node": "14.x",
-     "npm": "7.21.0"
-    },
+    "npm": "7.21.0"
+  },
   "dependencies": {
     "concurrently": "^6.2.2",
     "esbuild": "^0.13.3",
+    "express": "^4.17.1",
     "kaboom": "^2000.0.0-beta.23",
     "lodash": "^4.17.21",
+    "parcel-bundler": "^1.12.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "serve": "^12.0.1",
     "static-here": "^1.0.0",
     "web-vitals": "^1.1.2",
-    "parcel-bundler": "^1.12.5",
     "webpack": "4.44.2"
   },
   "scripts": {
